make upstream a link

--- a/templates/repos.html
+++ b/templates/repos.html
@@ -14,7 +14,10 @@
             <name><a href="<Uri>"><Name></a></name>
             <With Tag><a href="<Uri>" title="<Title>" class="tag muted"><Tag></a></With>
           </bar>
-          <desc><Desc ornull /><p class="upstream"><Upstream ornull></p>
+          <desc>
+            <Desc ornull />
+            <p class="upstream"><With UpstreamBlk><a href="<Link />"><Link /></a></With>
+            </p>
             <div class="updated">
               <span><Updated></span>
             </div>
