update to verse namespaced templates

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,7 +1,7 @@
       <li><a href="/repos">repos<sup></sup></a></li>
       <li><a href="/user">owner<sup></sup></a></li>
       <li><a href="/network">network<sup></sup></a></li>
-      <For NavButtons>
+      <For NavButtons scope="global">
       <li><a href="<Url>"><Name /><sup><Extra type="?usize" /></sup></a></li>
       </For>
       <li><NavAuth default="Public" /></li>
