--- a/templates/_meta_head.html
+++ b/templates/_meta_head.html
@@ -1,7 +1,7 @@
     <title><Title default="srctree - share some code" /></title>
     <link href="/static/main.css" rel="stylesheet">
     <link href="/static/icons.css" rel="stylesheet">
-    <With OpenGraph>
+    <With OpenGraph scope="global">
     <meta property="og:site_name" content="srctree // share some code">
     <meta property="og:title" content="<Title default='srctree'>">
     <meta property="og:description" content="<Desc default='Making git distributed since 2023'>">
