don't try to skip past root blame

--- a/templates/blame.html
+++ b/templates/blame.html
@@ -19,7 +19,7 @@
         <header><Filename></header>
         <div class="codeblock">
         <code><For BlameLines><span class="blame-line">
-            <span class="blame-header<TimeStyle ornull />"><span><a href="<BlameSkipHref />">&lt;|&nbsp;</a></span><time><Time ornull></time> <a href="/repo/<RepoName>/commit/<Sha>"><MSha ornull>&nbsp;</a><With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author ornull/></a></author></With></span>
+            <span class="blame-header<TimeStyle ornull />"><span><With BlameParent><a href="<Href />">&lt;|&nbsp;</a></With></span><time><Time ornull></time> <a href="/repo/<RepoName>/commit/<Sha>"><MSha ornull>&nbsp;</a><With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author ornull/></a></author></With></span>
             <ln num="<Num type="usize" />" id="L<Num type="usize" />" href="#L<Num type="usize" />"><Line /></ln>
           </span></For></code>
         </div>
